Add X/Twitter data collector with comprehensive scraping features
- Aggressive scraping with search variants and multi-language support
- Full pagination system with resume capability
- SQLite storage with rich metadata extraction
- Network expansion (replies, retweeters, conversations)
- Concurrent job processing with 20+ advanced filters
- Complete documentation and setup guides

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,59 @@
-.DS_Store
-.ruff_cache/
-.coverage
-accounts/
-results-raw/
-results-parsed/
-accounts.db*
-data/
-data_media/
+# Database files
+*.db
+*.db-journal
+*.db-wal
+*.db-shm
+*.sqlite
+*.sqlite3
+pagination_state.db
+tweets.db
+accounts.db
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
 dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual Environment
+venv/
+env/
+ENV/
+.venv
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+
+# Sensitive data
+account.txt
+x.json
+
+# Keep example files
+!x.json.example
